--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1,5 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 * {
 	margin: 0px;
 	padding: 0px;
 	box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
+}
+body{
+	background: #323232;
+}
+.bg{
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	background: #2bbaff;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+}
+.bg h2{
+	position: relative;
+	font-size: 5em;
+	color: #fff;
+}
+.skewedOne{
+	position: absolute;
+	bottom: -100%; left: 50%;
+	width: 100%;
+	height: 100%;
+	background: #323232;
+	transform: skewY(-15deg);
+	transform-origin: top left;
+}
+.skewedTwo{
+	position: absolute;
+	bottom: -100%; right: 50%;
+	width: 100%;
+	height: 100%;
+	background: #323232;
+	transform: skewY(15deg);
+	transform-origin: top right;
+}
+section{
+	padding: 100px;
+}
+section h2{
+	color: #fff;
+	font-size: 2em;
+	margin-bottom: 30px;
+}
+section P{
+	color: #fff;
+	font-size: 1.1em;
+	margin-bottom: 20px;
+	text-align: justify;
 }
